Final Pre-war Reichstag Stuff
-I think this finalises a lot of the Reichstag stuff now, still need to do the predicted stuff

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -258,16 +258,6 @@ ww1_germanrework.33.d:0 "The time has finally come and the British diplomats hav
 ww1_germanrework.34.t:0 "The Haldane Mission Successful"
 ww1_germanrework.34.d:0 ""
 
-#Reichstag
-GER_reichstag_category:0 "Reichstag"
- GER_reichstag_category_desc:0 "The Reichstag is Germany's lower House of Parliament, as it has been from 1871 after being introduced with the imperial consitution. Within the governmental structure of the Reich, it represents the national and democratic element of the empire - alongside the federalism of the Bundesrat and the monarchic element of the governemtn, embodied in the Reich chancellor. Together with the Bundesrat, the Reichstag holds legislative power and shared in decision-making on Imperial law.\n\nLaws must be passed in the Reichstag before being sent through the Bundestrat, each law will be supported by different parties depending on their politcal alignment, the more powerful the party, the more votes the law will obtain. However, we can still lobby support from other parties."
-GER_election1:0 "Upcoming Reichstag Election"
-GER_election2:0 "Upcoming Reichstag Election"
-GER_calculate_predicted_results:0 "Predicted Results"
-GER_calculate_predicted_results_desc:0 "Predicted results will be updated."
-
-GER_reichstag_next_elections_category:0 "Predicted Election Results"
-
 #Balance of Power - Conservatives
 GER_conservatives_vs_nationalists:0 "Power Struggle in the Right-Wing"
 GER_conservatives_nationalists_balanced:0 "Complacent Factions"
@@ -429,4 +419,22 @@ GER_establishing_the_foreign_armies:0 "Establish the Foreign Armies"
 GER_blitzproduktion:0 "Blitzproduktion"
 GER_victory_economics:0 "Victory Economics"
 
+#Reichstag
+GER_reichstag_category:0 "Reichstag"
+ GER_reichstag_category_desc:0 "The Reichstag is Germany's lower House of Parliament, as it has been from 1871 after being introduced with the imperial consitution. Within the governmental structure of the Reich, it represents the national and democratic element of the empire - alongside the federalism of the Bundesrat and the monarchic element of the governemtn, embodied in the Reich chancellor. Together with the Bundesrat, the Reichstag holds legislative power and shared in decision-making on Imperial law.\n\nLaws must be passed in the Reichstag before being sent through the Bundestrat, each law will be supported by different parties depending on their politcal alignment, the more powerful the party, the more votes the law will obtain. However, we can still lobby support from other parties."
+GER_election1:0 "Upcoming Reichstag Election"
+GER_election2:0 "Upcoming Reichstag Election"
+GER_calculate_predicted_results:0 "Predicted Results"
+GER_calculate_predicted_results_desc:0 "Predicted results will be updated."
+
+GER_reichstag_next_elections_category:0 "Predicted Election Results"
+
 GER_election1_desc:0 "Predicted Election Outcome:\n§RSPD§! - [?SPD_upcoming]\n§8FVp§! - [?FVP_upcoming]\n§GNLP§! - [?NLP_upcoming]\n§qZ§! - [?Z_upcoming]\n§3FkP§! - [?FKP_upcoming]\n§cDkP§! - [?DKP_upcoming]\n§dWV§! - [?WV_upcoming]\n§NDRP§! - [?DRP_upcoming]\n§7RP§! - [?RP_upcoming]\n§LNM§! - [?NM_upcoming]\n§gNA§! - [?NA_upcoming]"
+
+
+ww1_germanreichstagelection.1.t:0 "The Election Results"
+ ww1_germanreichstagelection.1.d:0 ""
+ ww1_germanreichstagelection.1.a:0 "Now the work begins"
+ww1_germanreichstagelection.2.t:0 "Elections to be postponed by the Reichstag"
+ ww1_germanreichstagelection.2.d:0 ""
+ ww1_germanreichstagelection.2.a:0 "Sacrifices must be made"
