--- a/localisation/english/ww1_research_l_english.yml
+++ b/localisation/english/ww1_research_l_english.yml
@@ -125,8 +125,8 @@
  decryption_machine_desc:0 "Decryption Machine"
  early_fire_control_system:0 "Early Fire Control System"
  early_fire_control_system_desc:0 "Early fire control systems were created on the basis of original mechanical computing devices. In a way, they were giant calculators for calculating range or direction."
- #LAND DOCTRINES
- TITLE_WW1_LANDDOCTRINE:0 "Great War Era Doctrine"
+ #LAND DOCTRINE
+ TITLE_WW1_LANDDOCTRINE:0 "Great War Era Land Doctrine"
  WW1_LANDDOCTRINE_DESC:0 "The Franco-Prussian War has defined the totality of modern warfare, while the Russo-Japanese War has shown the importance of fortification.\nA big war will put many tactics to the test..."
  BITE_AND_HOLD_LABEL:0 "BITE AND HOLD"
  BITE_AND_HOLD_LABEL_TT:0 "Improve breakthrough and organization of leg infantry."
@@ -162,8 +162,35 @@
  ww1_artillery_support_desc:0 "Unfortunately, we failed to understand the value of some great technological advancements like armored cars or tanks on time. Being outnumbered in the new technology by enemy, we can make up for that by focusing on supplying our infantry with more submachine guns, steel helmets, grenades and artillery support. The better material will win the war, and our industry will provide it."
  ww1_combined_arms:0 "Combined Arms"
  ww1_combined_arms_desc:0 "Tanks, gas and aviation have changed the face of modern war forever. With the new technologies and techniques developed to secure an edge over the enemy it had became clear, that attrition warfare is no longer a viable strategy to win this war. Instead, we will throw all arms at the enemy to secure the victory in a single offensive along the entire frontline."
- #AIR DOCTRINES
- TITLE_WW1_AIRDOCTRINE:0 "Great War Era Doctrine"
+ #NAVAL DOCTRINE
+ TITLE_WW1_NAVALDOCTRINE:0 "Great War Era Naval Doctrine"
+ WW1_NAVALDOCTRINE_DESC:0 "Technological change transformed warship design and consequently most aspects of naval war. A decisive fleet encounter would decide the war at sea."
+ ww1_navaldoctrine:0 "Dreadnought Primacy"
+ ww1_navaldoctrine_desc:0 ""
+ ww1_shore_support:0 "Shore Support"
+ ww1_shore_support_desc:0 ""
+ ww1_convoy_mission:0 "Convoy Mission"
+ ww1_convoy_mission_desc:0 ""
+ ww1_modern_blockade:0 "Modern Blockade"
+ ww1_modern_blockade_desc:0 ""
+ ww1_naval_airship_operations:0 "Naval Airship Operations"
+ ww1_naval_airship_operations_desc:0 ""
+ ww1_minelaying_emphasis:0 "Minelaying Emphasis"
+ ww1_minelaying_emphasis_desc:0 ""
+ ww1_minesweeping_emphasis:0 "Minesweeping Emphasis"
+ ww1_minesweeping_emphasis_desc:0 ""
+ ww1_early_seaplanes:0 "Seaplane Tenders"
+ ww1_early_seaplanes_desc:0 ""
+ ww1_unrestricted_submarine_warfare:0 "$unrestricted_submarine_warfare$"
+ ww1_unrestricted_submarine_warfare_desc:0 "$unrestricted_submarine_warfare_desc$"
+ ww1_convoy_defense:0 "Convoy Defense"
+ ww1_convoy_defense_desc:0 ""
+ ww1_advent_of_sonar:0 "Advent_of Sonar"
+ ww1_advent_of_sonar_desc:0 ""
+ ww1_all_or_nothing_armor:0 "All-or-Nothing Armor"
+ ww1_all_or_nothing_armor_desc:0 ""
+ #AIR DOCTRINE
+ TITLE_WW1_AIRDOCTRINE:0 "Great War Era Air Doctrine"
  WW1_AIRDOCTRINE_DESC:0 "The emergence of heavier-than-air flight presaged the change in the character of warfare."
  ww1_airdoctrine:0 "Observation Balloons"
  ww1_airdoctrine_desc:0 "Observation balloons provide an advantage for military intelligence. These tethered balloons use binoculars and early photographic equipment, allowing them to scout enemy positions and direct artillery fire accurately."
