Focus: State of the Navy

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -213,6 +213,11 @@ ww1_germanrework.43.t:0 "A 'German' Empire"
  ww1_germanrework.43.a:0 "Expand the citizenship"
  ww1_germanrework.43.b:0 "A German Empire for the Poles? I think not"
 
+#The State of the Navy
+ww1_germanrework.44.t:0 "The State of the Navy"
+ ww1_germanrework.44.d:0 ""
+ ww1_germanrework.44.a:0 "Onwards, to our place in the sun"
+
 #The Zabern Affair
 #A Crisis Stirs
 ww1_germanrework.26.t:0 "A Crisis Stirs"
