--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5725,6 +5725,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_lift_the_armenian_reforms_desc:0 "Though the Yeniköy Accord was signed under the pressure of foreign powers, our war against them shall justify our actions in abolishing the agreement, and working towards centralizing our Armenian vilayets."
  TUR_scrap_the_treaty_of_daan:0 "Scrap the Treaty of Daan"
  TUR_scrap_the_treaty_of_daan_desc:0 "Though we found the solution in granting autonomy to Imam Yahya, ending centuries old Yemeni-Ottoman conflict, the current state of the nation favors us to abolish their autonomy."
+ TUR_scrap_the_treaty_of_daan_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\nDivision Attrition: §R+80.0%§!\n\n"
  TUR_increase_yemen_centralization_10:0 "Modify §YCentralization§! of §YYemen Vilayet§! by §G+10%§!\n"
  TUR_abolish_principality_of_samos:0 "Abolish Principality of Samos"
  TUR_abolish_principality_of_samos_desc:0 "Granted self-rule in 1834, Samos has been enjoying large scale autonomy with its own governor and parliament. Yet as we're trying to integrate our empire, we cannot let this autonomous region to exist within our empire."
