Focus: Aftermath of the Haldane mission

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -317,6 +317,8 @@ ww1_germanytooltip12:0 "This is a §Rleftist§! law."
 ww1_germanytooltip13:0 "This is a §gcentrist§! law."
 ww1_germanytooltip14:0 "This is a §3rightist§! law."
 ww1_germanytooltip15:0 "This law will correlate to the ideology of the chancellor."
+ww1_germanytooltip16:0 "This focus will reveal it's effects depending on the outcome of the Haldane mission."
+ww1_germanytooltip17:0 "The Haldane mission was a successes, it's now possible to fully push for British neutrality in the war and persue our goals in Africa"
 
 #Dynamic Modifiers
 GER_agricultural_incentives:0 "Agricultural Incentives"
