Focus: Rememberance of German Pride + Notes

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -436,7 +436,7 @@ GER_calculate_predicted_results_desc:0 "Predicted results will be updated."
 
 GER_reichstag_next_elections_category:0 "Predicted Election Results"
 
-GER_election1_desc:0 "Predicted Election Outcome:\n§RSPD§! - [?SPD_upcoming]\n§8FVp§! - [?FVP_upcoming]\n§GNLP§! - [?NLP_upcoming]\n§qZ§! - [?Z_upcoming]\n§3FkP§! - [?FKP_upcoming]\n§cDkP§! - [?DKP_upcoming]\n§dWV§! - [?WV_upcoming]\n§NDRP§! - [?DRP_upcoming]\n§7RP§! - [?RP_upcoming]\n§LNM§! - [?NM_upcoming]\n§gNA§! - [?NA_upcoming]"
+GER_election1_desc:0 "Predicted Election Outcome:\n§RSPD§! - [?SPD_upcoming] Seats\n§8FVp§! - [?FVP_upcoming] Seats\n§GNLP§! - [?NLP_upcoming] Seats\n§qZ§! - [?Z_upcoming] Seats\n§3FkP§! - [?FKP_upcoming] Seats\n§cDkP§! - [?DKP_upcoming] Seats\n§dWV§! - [?WV_upcoming] Seats\n§NDRP§! - [?DRP_upcoming] Seats\n§7RP§! - [?RP_upcoming] Seats\n§LNM§! - [?NM_upcoming] Seats\n§gNA§! - [?NA_upcoming] Seats"
 
 
 ww1_germanreichstagelection.1.t:0 "The Election Results"
