major bug!!!!! needs to be fixed

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4763,6 +4763,7 @@
  TUR_german_trade_dependency_desc:0 "Ever since the declaration of the German Empire, the Germans have started to look abroad to expand into other markets. Our empire, which was dominated by France and Britain in terms of trade, has met with the German commerical interest in the following years. Today, German trade stands as one of the biggest part of our trade activities. Though their financial activities in the empire has its benefits, it also leads to our overreliance to Germany."
  TUR_german_ottoman_arms_deal:0 "German-Ottoman Arms Deal"
  TUR_german_ottoman_arms_deal_desc:0 "We're incapable of producing our own arms in large numbers. We better make arms deals with the Germans that is in the best interest of the both sides."
+ TUR_german_ottoman_arms_deal_tt:0 "Cost of every German §Yweapon purchases§! will be halved."
  TUR_berlin_baghdad_railway:0 "Berlin-Baghdad Railway"
  TUR_berlin_baghdad_railway_desc:0 "Started in 1903 with German investment, Berlin-Baghdad Railway is a vital economic and strategic project for our country. In addition to economic opportunities it will provide, completion of this railway project will strengthen our authority in the Middle Eastern provinces and ease the execution of our mobilisation plans in case of a possible war."
  TUR_german_bailout:0 "German Bailout"
