--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3486,7 +3486,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_diyarbakir_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_diyarbakir_stability_factor|=2%+]"
  ottoman_diyarbakir_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_diyarbakir_war_support_factor|=2%+]"
  ottoman_diyarbakir_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_diyarbakir_political_power_factor|=0%+]"
- ottoman_diyarbakir_vilayet_350_yes:0 "\n§Y[350.GetName]§!:[TUR_armenian_population_350][TUR_kurdish_population_350][TUR_autonomy_350]"
+ ottoman_diyarbakir_vilayet_350_yes:0 "\n§Y[350.GetName]§!:[TUR_armenian_population_350][TUR_kurdish_population_350][TUR_assyrian_population_350][TUR_autonomy_350]"
  ottoman_diyarbakir_vilayet_1028_yes:0 "\n§Y[1028.GetName]§!:[TUR_kurdish_population_1028][TUR_assyrian_population_1028]"
 
  TUR_erzurum_vilayet:0 "Erzurum Vilayet"
