--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5864,7 +5864,12 @@ ROM_mil_speed_1:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! cons
 ROM_mil_speed_2:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! construction speed: §G+15.00%§!\nStability: §R-10.00%§!"
 ROM_mifocus:0 "Modify §YRomanian Economy§! by\nStability: §G+5.00%§!\nProduction Efficiency growth: §G+5.00%§!"
 ROM_m2ifocus:0 "Modify §YRomanian Economy§! by\nFactory Output: §G+5.00%§!\nProduction Efficiency growth: §G+5.00%§!"
-ROM_ift2.tt:0 "Modify §YRomanian Economy§! by\nConstruction Speed: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.105§!"
+ROM_ift2.tt:0 "Modify §YRomanian Economy§! by\nConstruction Speed: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!"
+
+
+ROM_talk_tuah.tt:0 "Modify §YRomanian Economy§! by\nConsumer Goods Factories factor: §Y-10.0%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!"
+
+
 ROM_ift.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£factory_output_texticon Factory Output: §G+5.00%§!"
 ROM_txp.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.15§!\nConsumer Goods Factories factor: §Y-10.0%§!\nStability: §G+5.00%§!"
 ROM_ice.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
