--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1095,9 +1095,9 @@
  frankfurt_armistice_mission:0 "Armistice of Frankfurt"
  frankfurt_armistice_tt:0 "The Great War ended in the defeat of Entente."
  frankfurt_armistice_message:0 "§YGermany§! and §Ythe Central Powers§! are victorious. §YFrance§! and §Yher allies§! will have to pay the prices demanded by the victors in the post-war treaty."
- frankfurt_conference:0 "Frankfurt Conference"
+ frankfurt_conference:0 "Frankfurt Peace Conference"
  frankfurt_conference_desc:0 "Politicians from the Central Powers are debating how to divide the defeated countries territories and colonies and expand their empires and hegemonies."
- frankfurt_treaty:0 " Frankfurt Treaty "
+ frankfurt_treaty:0 " Treaty of Frankfurt  "
  great_war:0 "The Great War\n"
  great_war_loser:0 "Defeat in the Great War\n"
  great_war_winner:0 "Victory in the Great War\n"
