--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -33,7 +33,7 @@
  ww1_generic.8.a: "Move forward with the truce."
  ww1_generic.8.b: "There will be no truce, only total victory!"
  ww1_generic.9.t: "A Disease Like No Other"
- ww1_generic.9.d: "The Influenza Epidemic has struck due to the unsanitary conditions in the trenches. We haven't been confronted with an pandemic of this size in hundreds of years, and we aren't nearly prepared enough to deal with it. There is a shortage of almost everything due to the demands of the war, meaning that the homefront will suffer all the more. Our greatest  scientists have begun to work earnestly in order to find some sort of solution, but progress isn't looking well.\n\nThe origin of the virus is unknown as of now, but we do know it's everywhere; especially the trenches. Our military cohesion has suffered to a degree making it nearly impossible to launch assaults on enemy trenches without retreating back simply due to the condition of our men. All attacks must be postponed or planned out to a degree that ensures victory, otherwise the price to pay may cost us everything.
+ ww1_generic.9.d: "The Influenza Epidemic has struck due to the unsanitary conditions in the trenches. We haven't been confronted with an pandemic of this size in hundreds of years, and we aren't nearly prepared enough to deal with it. There is a shortage of almost everything due to the demands of the war, meaning that the homefront will suffer all the more. Our greatest  scientists have begun to work earnestly in order to find some sort of solution, but progress isn't looking well.\n\nThe origin of the virus is unknown as of now, but we do know it's everywhere; especially the trenches. Our military cohesion has suffered to a degree making it nearly impossible to launch assaults on enemy trenches without retreating back simply due to the condition of our men. All attacks must be postponed or planned out to a degree that ensures victory, otherwise the price to pay may cost us everything."
  ww1_generic.9.a: "What cruel god would do such a thing?"
  ww1_generic.10.t: "Influenza Pandemic"
  ww1_generic.10.d: "The Influenza H1N1 virus is spreading like wildfire due to the terrible conditions in the trenches. The epidemic has infected thousands of soldiers already and is on its way to absolutely consume the batttlefield. The homefront has it worse, with astronomical infection rates and enough death to satisfy the devil.\n\nMaybe we are being punished for our hubris, maybe we shouldn't have played god over our fellow man. We mustn't linger on such things though as this crisis looms larger than anything else, perhaps even the war."
@@ -8071,9 +8071,15 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_germany.53.d:0 "From [GER.GetLeader] to [MEX.GetLeader]:\n\n'We intend to begin unrestricted submarine warfare. We shall endeavor in spite of this to keep [USA.GetName] neutral. In the event of this not succeeding, we make Mexico a proposal of alliance on the following basis: make war together, make peace together, generous financial support and an understanding on our part that Mexico is to reconquer the lost territory in Texas, New Mexico, and Arizona."
  ww1_germany.53.a:0 "America will pay for everything!"
  ww1_germany.53.b:0 "We are not so strong."
- ww1_germany.54.t:0 "Mexico agrees to support Germany"
- ww1_germany.55.t:0 "Mexico rejects Zimmerman's offer"
- ww1_germany.56.t:0 "Secret alliance with Germany"
+ ww1_germany.54.t:0 "Mexico Agrees to Support Germany"
+ ww1_germany.54.d:0 "The authority in Mexico surprisingly have agreed to our foreign minister's bold proposal to invade [USA.GetNameDef]. Our attempts to open a new front in the North America now works in progress."
+ ww1_germany.54.a:0 "Grossartig!"
+ ww1_germany.55.t:0 "Mexico Rejects Zimmerman's Offer"
+ ww1_germany.55.d:0 "The authority in Mexico have balked at our foreign minister's bold proposal to invade [USA.GetNameDef]. Our attempts to open a new front in the North America were ignored."
+ ww1_germany.55.a:0 "Verdammt!"
+ ww1_germany.56.t:0 "Secret Alliance with Germany"
+ ww1_germany.56.d:0 "Now we are now ready to join the war effort of the [GER.GetFactionName]."
+ ww1_germany.56.a:0 "To hell with Yankees!"
  ww1_germany.57.t:0 "Austria Hungary transfers Italian territories"
  ww1_germany.58.t:0 "Austria Hungary transfers Romanian territories"
  ww1_germany.59.t:0 "Lenin was killed by a German Agent"
