--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1104,6 +1104,7 @@
  interbellum:0 "Interbellum\n"
  great_war_ends:0 "The Great War has ended\n"
  no_scripted_peace_warning_tt:0 "§RWarning: With this option, war truces will no longer be available, and any interwar content prepared will not work properly. This means you'll have to continue the war untill every enemy major countries has been defeated, accessing the vanilla peace conference.§!"
+ russ_kapitulation:0 "§YRussia§! has capitulated to §Ythe Central Powers§!"
 
  pos_has_been_founded:0 "The Partido Obrero Socialista Has Been Founded\n"
  
