--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -10136,6 +10136,12 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  garibaldi.35.d:0 "The socialists who have taken control of northern Italy have demanded that we follow the cause of socialism and bring a socialist party to power. Ignoring it will result in violence."
  garibaldi.35.a:0 "Hold an early election."
  garibaldi.35.b:0 "It's a violation of sovereignty!"
+ garibaldi.36.t:0 "Prince Emanuele Filiberto Dies"
+ garibaldi.36.c:0 "King Emanuele Filiberto Dies"
+ garibaldi.36.d:0 "Prince Emanuele Filiberto died at Turin. In accordance and observance of his will, he was buried in the military cemetery of Redipuglia, together with thousands of soldiers of the Third Army."
+ garibaldi.36.a:0 "Rest in peace."
+ garibaldi.36.e:0 "King Emanuele Filiberto, who reigned as the King of [ROOT.GetName] during a difficult time of national disorder and the House of Savoy, dies. His eldest son, Amedeo, succeeds to the throne."
+ garibaldi.36.b:0 "The king is dead, long live the king!"
 
  # LUXEMBOURG
  ww1_luxembourg.1.a: "Good luck to her."
