--- a/localisation/russian/ww1_characters_l_russian.yml
+++ b/localisation/russian/ww1_characters_l_russian.yml
@@ -32,7 +32,7 @@
  ALB_high_council_of_regency:0 "Këshilli i Naltë i Regjencës"
  ALB_fan_noli:0 "Fan Noli"
  ALB_avni_rrustemi:0 "Avni Rrustemi"
- ALB_vittorio_emanuele_iii:0 "Viktor Emanueli"
+ ALB_vittorio_emanuele:0 "Viktor Emanueli"
  ALB_isa_boletini:0 "Isa Boletini"
 
  # AMARAT
