--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1341,6 +1341,7 @@
  ITA_FRA_intervene_in_civil_war:0 "Intervention in Italian Civil War"
 
  SRD_sardinia_piedmont:0 "Proclaim Sardinia-Piedmont"
+ SRD_reclaim_italy:0 "Reclaim the Kingdom of Italy"
 
  ITA_fiume_timer:0 "Deal with Fiume"
  treaty_of_rapallo_1920:0 "Treaty of Rapallo has been signed"
