--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1266,10 +1266,14 @@
  ITS_democratic_DEF:0 "the Kingdom of Italy"
  ITS_fascism:0 "Kingdom of Italy"
  ITS_fascism_DEF:0 "the Kingdom of Italy"
+ ITS_neutrality:0 "Kingdom of Italy"
+ ITS_neutrality_DEF:0 "the Kingdom of Italy"
  ITS_bourbon_fascism:0 "Italian Empire"
  ITS_bourbon_fascism_DEF:0 "the Italian Empire"
  ITS_bourbon_democratic:0 "Kingdom of Italy"
  ITS_bourbon_democratic_DEF:0 "the Kingdom of Italy"
+ ITS_bourbon_neutrality:0 "Kingdom of Italy"
+ ITS_bourbon_neutrality_DEF:0 "the Kingdom of Italy"
  ITS_bourbon_communism:0 "Commune of Italy"
  ITS_bourbon_communism_DEF:0 "the Commune of Italy"
  SRI_communism:0 "Socialist Italy"
