bug fixes on the way

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1936,6 +1936,22 @@
  TUR_ottoman_cemal_DEF:0 "the Ottoman Reclamation Government Under the Command of Ahmed Cemâl Paşa"
  TUR_ottoman_cemal_ADJ:0 "Ottoman"
 
+ TUR_ottoman_selanik:0 "Ottoman Selanik"
+ TUR_ottoman_selanik_DEF:0 "the Autonomous Ottoman Vilayet of Selanik"
+ TUR_ottoman_selanik_ADJ:0 "Selanik"
+ TUR_ottoman_manastir:0 "Ottoman Manastır"
+ TUR_ottoman_manastir_DEF:0 "the Autonomous Ottoman Vilayet of Manastır"
+ TUR_ottoman_manastir_ADJ:0 "Manastır"
+ TUR_ottoman_kosova:0 "Ottoman Kosova"
+ TUR_ottoman_kosova_DEF:0 "the Autonomous Ottoman Vilayet of Kosova"
+ TUR_ottoman_kosova_ADJ:0 "Kosova"
+ TUR_ottoman_yanya:0 "Ottoman Yanya"
+ TUR_ottoman_yanya_DEF:0 "the Autonomous Ottoman Vilayet of Yanya"
+ TUR_ottoman_yanya_ADJ:0 "Yanya"
+ TUR_ottoman_iskodra:0 "Ottoman İşkodra"
+ TUR_ottoman_iskodra_DEF:0 "the Autonomous Ottoman Vilayet of İşkodra"
+ TUR_ottoman_iskodra_ADJ:0 "İşkodra"
+
  TUR_turkish_empire:0 "Turkish Empire"
  TUR_turkish_empire_DEF:0 "the Turkish Empire"
  TUR_turkish_empire_democratic:0 "Republic of Turkey"
