--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4848,6 +4848,10 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.148.d: "Even though it took some time for our pashas to return to their duties even after the war in Tripolitania has been concluded, they're finally back. With their newly learned experties, they'll be more than successful forecoming conflicts."
  ottoman.148.a: "Welcome home, pasha."
  ottoman_pashas_back_from_libya: "§YIsmail Enver Bey§!([TUR.GetFlag]) and §YMustafa Kemal Paşa§!([TUR.GetFlag]) is once again available."
+ ottoman.149.t:0 "Post-War Elections"
+ ottoman.149.d:0 "Since the war is over, there's no hindrance before elections. As planned before, two parties will race for the governing place of the empire and secure majority in the parliament."
+ ottoman.149.a:0 "Lets prepare for the elections."
+ ottoman.149.tt:0 "Public elections will be held next month."
 
  ottoman_syria.1.t:0 "Küçük Cemal to Syria"
  ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
@@ -13849,8 +13853,8 @@ gre_we_shall_not_perish: "We Shall Not Perish"
  ww1_firstbalkan.113.t: "[FROM.getAdjective] Ultimatum"
  ww1_firstbalkan.113.d: "We received an ultimatum from [FROM.getName], together with Greece and Serbia, to recognize the autonomy of non-Turkish territories in the Balkans. They also ordered the demilitarization of a large part of the region, the construction of local schools and many ethnic privileges. Responding positively to such a request would have a significant financial hit, while further threatening regional stability. But by refusing, we probably expose ourselves to war against the Balkan alliance."
  ww1_firstbalkan.113.a: "Never!"
- ww1_firstbalkan.113.b: "We cant afford a war there"§Y§!
- TUR_dismantle_balkan_integrity: "§YNon-[TUR.getFlag][TUR.getAdjective]§! states in Europe will be released as §YEmirates§! and will be §Rdemilitarized§!.\n\n§RBalkan League members will get decisions to annex parts of theses new states§!.\n\nWe will get our own decisions to §Yfight local disloyality.§!"
+ ww1_firstbalkan.113.b: "We cant afford a war there."
+ TUR_dismantle_balkan_integrity: "§YSelanik Vilayet§!, §YManastır Vilayet§!, §YYanya Vilayet§!, §YKosova Vilayet§! and §Yİşkodra Vilayet§! will be released as §YAutonomous Vilayet§! and will be §Rdemilitarized§!.\n§RBalkan League members will get decisions to annex parts of theses new states.§!\n\nUnlocks £decision_icon_small  §YFight Local Disloyalties§! Decisions."
 
  ww1_firstbalkan.114.t: "[FROM.getName] Refused"
  ww1_firstbalkan.114.d: "As we expected, the Ottoman authorities categorically refused our ultimatum, giving us the ideal opportunity to attack without delay!"
