--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -54,8 +54,6 @@ GER_state_of_the_military:0 "State of the Military"
 GER_state_of_the_military_desc:0 "State of the Military is currently at [?state_of_the_military]"
 add_to_var:0 "Add 10"
 subtract_from_var:0 "Subtract 10"
-addten:0 "Increase State of the Military by 10"
-addfive:0 "Increase State of the Military by 5"
 GER_abteilung_3b:0 "Abteilung IIIb"
 GER_abteilung_3b_expand:0 "Abteilung IIIb"
 GER_abteilung_3b_foreign:0 "Abteilung IIIb"
@@ -319,6 +317,13 @@ ww1_germanytooltip14:0 "This is a §3rightist§! law."
 ww1_germanytooltip15:0 "This law will correlate to the ideology of the chancellor."
 ww1_germanytooltip16:0 "This focus will reveal it's effects depending on the outcome of the Haldane mission."
 ww1_germanytooltip17:0 "The Haldane mission was a successes, it's now possible to fully push for British neutrality in the war and persue our goals in Africa"
+
+ww1_germany_pf:0 "State of the Military Increase by 5."
+ww1_germany_pt:0 "State of the Military Increase by 10."
+ww1_germany_pft:0 "State of the Military Increase by 15."
+ww1_germany_mf:0 "State of the Military Decreased by 5."
+ww1_germany_mt:0 "State of the Military Decreased by 10."
+ww1_germany_mft:0 "State of the Military Decreased by 15."
 
 #Dynamic Modifiers
 GER_agricultural_incentives:0 "Agricultural Incentives"
