--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2849,10 +2849,17 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_ceasefire_with_libyans_tt:0 "§YArab Minorities§! will cease their opposition untill the end of the war.\n£ww1_flag_ARB §YArab Minority§! modifier will return after our war with [ITA.GetFlag]§Y[ITA.GetNameDef]§!."
  TUR_civil_conscription_libyanwar:0 "Every §YTrablus Milisi§! template will be disbanded after our war with [ITA.GetFlag]§Y[ITA.GetNameDef]§!."
  TUR_call_for_the_balkan_war_decisions:0 "Call for the Balkan War"
- TUR_increased_garrison_albania:0 "Increased Garrison in Albania"
- TUR_increased_garrison_macedonia:0 "Increased Garrison in Macedonia"
- TUR_increased_garrison_northern_greece:0 "Increased Garrison in Epirus"
- TUR_open_albanian_escape_ports:0 "[TUR.balkanwar_open_albanian_escape_ports]"
+ TUR_increased_garrison_in_selanik_vilayet:0 "Increased Garrison in Selanik Vilayet"
+ TUR_increased_garrison_in_selanik_vilayet_desc:0 "Revolutionaries and their activities in Selanik Vilayet has reached a dangerously high level. If we don't want minorities in these vilayets to revolt, we'll have to increase garrison in them."
+ TUR_increased_garrison_in_manastir_vilayet:0 "Increased Garrison in Manastır Vilayet"
+ TUR_increased_garrison_in_manastir_vilayet_desc:0 "Revolutionaries and their activities in Manastır Vilayet has reached a dangerously high level. If we don't want minorities in these vilayets to revolt, we'll have to increase garrison in them."
+ TUR_increased_garrison_in_kosova_vilayet:0 "Increased Garrison in Kosova Vilayet"
+ TUR_increased_garrison_in_kosova_vilayet_desc:0 "Revolutionaries and their activities in Kosova Vilayet has reached a dangerously high level. If we don't want minorities in these vilayets to revolt, we'll have to increase garrison in them."
+ TUR_increased_garrison_in_yanya_vilayet:0 "Increased Garrison in Yanya Vilayet"
+ TUR_increased_garrison_in_yanya_vilayet_desc:0 "Revolutionaries and their activities in Yanya Vilayet has reached a dangerously high level. If we don't want minorities in these vilayets to revolt, we'll have to increase garrison in them."
+ TUR_increased_garrison_in_iskodra_vilayet:0 "Increased Garrison in İşkodra Vilayet"
+ TUR_increased_garrison_in_iskodra_vilayet_desc:0 "Revolutionaries and their activities in İşkodra Vilayet has reached a dangerously high level. If we don't want minorities in these vilayets to revolt, we'll have to increase garrison in them."
+ TUR_open_albanian_escape_ports:0 "[TUR.balkanwar_op:0 "Revolutionaries and their activities in Selanik Vilayet has reached a dangerously high level. If we don't want minorities in these vilayets to revolt, we'll have to increase garrison in them."en_albanian_escape_ports]"
  balkanwar_open_albanian_escape_ports1:0 "Open Escape Ports in Vlorë"
  balkanwar_open_albanian_escape_ports2:0 "Open Escape Ports in Tirana"
  TUR_open_albanian_escape_ports_tt:0 "Any controlled state:\nIs in §YAlbania§!, §YMacedonia§!, §YSerbia§!, §YMontenegro§!, §YNorthern Greece§! or §YEastern Bulgaria§!\nHas 0 §YSupply Hubs§!"
@@ -2877,8 +2884,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_fortification_of_vlore:0 "Fortification of Vlorë"
  TUR_fortification_of_tirana:0 "Fortification of Tirana"
  TUR_fortification_of_shkoder:0 "Fortification of Shkodër"
- TUR_decision_cost_7commandpower:0 "£command_power §Y7§!"
- TUR_decision_cost_7commandpower_blocked:0 "£command_power §R7§!"
  TUR_decision_cost_armyxp:0 "[TUR_decision_cost_armyxp]"
  TUR_decision_cost_armyxp_blocked:0 "[TUR_decision_cost_armyxp_blocked]"
  TUR_decision_cost_30armyxp:0 "£army_experience §Y30§!"
