--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -50,6 +50,10 @@ GER_ohl_lr:0 "OHL Command"
 GER_ohl_lc:0 "OHL Command"
 GER_ohl_rc:0 "OHL Command"
 GER_ohl_final:0 "OHL Command"
+GER_1907_federal_budget:0 "The 1907 Federal Budget"
+GER_1907_federal_budget_desc:0 ""
+
+#Put stuff in the right place Mici!
 GER_state_of_the_military:0 "State of the Military"
 GER_state_of_the_military_desc:0 "State of the Military is currently at [?state_of_the_military]"
 add_to_var:0 "Add 10"
@@ -298,6 +302,7 @@ GER_built_subs:0 "Has deployed 20 more submarines to the Kriegsmarine"
 sokehs_rebbelion_ongoing:0 "The Sokehs Rebbelion is ongoing"
 GER_failed_haldane_mission:0 "The Haldane Mission has failed"
 GER_successful_haldane_mission:0 "The Haldane Mission was successful"
+GER_1912_budget:0 "Attempting to Pass a New Budget"
 
 #Tooltips
 ww1_germanytooltip1:0 "If Belgium accepts our proposal we can expect the profit to benefit our economy as a whole."
@@ -324,6 +329,8 @@ ww1_germany_pft:0 "State of the Military Increase by 15."
 ww1_germany_mf:0 "State of the Military Decreased by 5."
 ww1_germany_mt:0 "State of the Military Decreased by 10."
 ww1_germany_mft:0 "State of the Military Decreased by 15."
+
+ww1_germanybundestrat:0 "When passed, the law will have the following effects:"
 
 #Dynamic Modifiers
 GER_agricultural_incentives:0 "Agricultural Incentives"
