important bug fixes

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -13902,9 +13902,9 @@ gre_we_shall_not_perish: "We Shall Not Perish"
  ww1_secondbalkan.9.a: "This is not happening..."
  ww1_secondbalkan.10.t: "Treaty of Constantinople"
  ww1_secondbalkan.10.d: "The territorial adjustment with Bulgaria ended with us getting only Eastern Thrace, which was the result of the intervention of other powers. If we are unhappy with receiving less land than we control, we can refuse to sign the treaty and continue the war..."
- ww1_secondbalkan.10.a: "Peace at last"
- ww1_secondbalkan.10.b: "No! We shall continue our return to Balkan Peninsula!"
- ww1_secondbalkan.10.b.tt: "\n§RRussia might intervene the war...§!\n"
+ ww1_secondbalkan.10.a: "An offer we shall take."
+ ww1_secondbalkan.10.b: "Who will defend the rights of Turks in the Balkans if not us?"
+ ww1_secondbalkan.10.b.tt: "\n§R[RUS.GetNameDef] is likely to intervene in the war.§!\n"
  ww1_secondbalkan.10.c: "Accept peace but we need more reparations."
  ww1_secondbalkan.11.t: "The Ottomans Trying to Return to the Balkans"
  ww1_secondbalkan.11.d: "The Ottomans rejected Bulgarian peace offer and decided to continue the war in effort to seize Rumelia. We had already warned the Ottomans that we would intervene if they continued to advance across the Maritsa River."
@@ -13924,9 +13924,9 @@ gre_we_shall_not_perish: "We Shall Not Perish"
  ww1_secondbalkan.14.a: "Quite escalated..."
  ww1_secondbalkan.14.b: "Let's do this."
  ww1_secondbalkan.15.t: "Bulgaria Offers Surrender"
- ww1_secondbalkan.15.d: "Bulgaria can no longer continue to engage in war against us and wants to sue for peace on the condition that it cedes the territory of Eastern Thrace."
- ww1_secondbalkan.15.a: "Hand over Western Thrace also."
- western_thrace_tt: "\nFor about §Ya month we will hold negotiations§! with §Y[BUL.GetFlag]Bulgaria§! on border adjustments. We §Rwon't be able to keep §Y[WTH.GetFlag]Western Thrace§!§! because §Y[RUS.GetFlag]Russia§! refuses to accept that we have any territory across the Maritsa River.\n§YAll negotiations will be destroyed if we engage in a state of war with Bulgaria or Russia.§!"
+ ww1_secondbalkan.15.d: "As we've entered Edirne, a politically and culturally important city both to our empire and to the Bulgarians, [BUL.GetNameDef] has accepted its defeat and sued for peace. Though we're aiming to recover territories ranging to Western Thrace, it stands as the Russian "arbitration" will not make it possible."
+ ww1_secondbalkan.15.a: "Western Thrace is Turk, and shall remain Turk."
+ western_thrace_tt: "\nFor about a month we will hold §Ynegotiations§! with §Y[BUL.GetFlag]Bulgaria§! on border adjustments. We §Rwon't be able to keep §Y[WTH.GetFlag]Western Thrace§!§! because §Y[RUS.GetFlag]Russia§! refuses to accept that we have any territory across the Maritsa River.\n§RAll negotiations will be destroyed if we go to war with [BUL.GetName] or [RUS.GetName].§!"
  ww1_secondbalkan.16.t: "The Second Balkan War"
  ww1_secondbalkan.16.d: "Today a war has broken out in the Balkans, with Bulgaria attacking its former Balkan League allies of Serbia and Greece, dissatisfied with its spoils from the war with the Ottomans. The Bulgarians have underestimated the strength of the Serbians and Greeks, who are putting up fierce resistance.\n\nWhichever way the war ends, the Balkans will be changes with Bulgaria becoming even weaker, or becoming the hegemony."
  ww1_secondbalkan.16.a: "Second round!"
