--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2831,6 +2831,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_declare_moratorium_desc:0 "Our debt has become more than what we're able to pay. By declaring a moratorium, we'll be able to reduce the effects of our current debt. Yet this decision of ours in the long run will strain our economy."
  TUR_foreign_debt_payment:0 "[FROM.GetAdjective] Debt Payment"
  TUR_foreign_debt_payment_desc:0 "Road to a strong economy goes through a free economy. As we pay our debts, we'll eventually be able to abolish the debt council that the foreign nations have been using as a tool to control our finances."
+ TUR_foreign_debt_payment_2:0 "[FROM.GetAdjective] Debt Payment"
+ TUR_foreign_debt_payment_2_desc:0 "Road to a strong economy goes through a free economy. As we pay our debts, we'll eventually be able to abolish the debt council that the foreign nations have been using as a tool to control our finances."
  has_active_debt_payment:0 "Is currently paying §YForeign Debt§!"
  TUR_privatize_factories:0 "Privatize Civilian Factories"
  TUR_sell_mosul_oil:0 "Oil Concessions over Mosul"
