--- a/localisation/russian/loading_tips_l_russian.yml
+++ b/localisation/russian/loading_tips_l_russian.yml
@@ -68,7 +68,7 @@
  LOADING_TIP_66: "Что-то не так с нашими проклятыми кораблями сегодня.\n- Дэвид Битти"
  LOADING_TIP_67: "Они не состарятся, как стареем мы, оставшиеся. Мы будем помнить их.\n- Роберт Биньон"
  LOADING_TIP_68: "Единственный человек с обеих сторон, который мог проиграть войну за один день.\n- Уинстон Черчилль (об адмирале сэре Джоне Джеллико)"
- LOADING_TIP_69: "Война - слишком серьезная вещь, чтобы доверять её военным.\n- Жорж Клемансо"
+ LOADING_TIP_69: "Война - слишком серьезная вещь, чтобы доверять ее военным.\n- Жорж Клемансо"
  LOADING_TIP_70: "Джентльмены, битва окончена, победа за нами.\n- Адмирал Джордж Дьюи"
  LOADING_TIP_71: "Весь принцип морских сражений состоит в том, чтобы быть свободным идти куда угодно с каждой чертовой вещью, которой обладает флот.\n- Сэр Джон Фишер"
  LOADING_TIP_72: "На войне первый принцип - не подчиняться приказам. Любой дурак может подчиняться приказам!\n- Сэр Джон Фишер"
