--- a/localisation/russian/ww1_characters_l_russian.yml
+++ b/localisation/russian/ww1_characters_l_russian.yml
@@ -32,8 +32,8 @@
  ALB_high_council_of_regency:0 "Këshilli i Naltë i Regjencës"
  ALB_fan_noli:0 "Fan Noli"
  ALB_avni_rrustemi:0 "Avni Rrustemi"
- ALB_vittorio_emanuele:0 "Viktor Emanueli"
  ALB_isa_boletini:0 "Isa Boletini"
+ ALB_vittorio_emanuele:0 "Viktor Emanueli"
 
  # AMARAT
  AMR_fahd_bin_abdul_mohsen_al_hathal:0 "Fahd bin Abdul Mohsen Al Hathal"
@@ -1779,6 +1779,8 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  ITA_osvaldo_paladini:0 "Osvaldo Paladini"
  ITA_giacinto_ferrero:0 "Giacinto Ferrero"
  ITA_argo_secondari:0 "Argo Secondari"
+ ITA_amedeo_di_savoy_aosta:0 "Amedeo di Savoia-Aosta"
+ ITA_amedeo_i:0 "Amedeo I"
  
  # FIUME
  FIU_riccardo_zanella:0 "Riccardo Zanella"
