--- a/localisation/russian/ww1_decisions_l_russian.yml
+++ b/localisation/russian/ww1_decisions_l_russian.yml
@@ -1095,7 +1095,7 @@
  frankfurt_armistice_mission:0 "Франкфуртское перемирие"
  frankfurt_armistice_tt:0 "Великая война закончилась поражением Антанты."
  frankfurt_armistice_message:0 "§YГермания§! и §YЦентральные Державы§! побеждают. §YФранции§! и §Yее союзникам§! придется платить цену, требуемую победителями в послевоенном договоре."
- frankfurt_conference:0 "Франкфуртская конференция"
+ frankfurt_conference:0 "Франкфуртская мирная конференция"
  frankfurt_conference_desc:0 "Политики из Центральных Держав обсуждают, как разделить территории и колонии побежденных стран и расширить их империи и гегемонию."
  frankfurt_treaty:0 " Франкфуртский договор "
  great_war:0 "Великая Война\n"
@@ -1104,6 +1104,7 @@
  interbellum:0 "Интербеллум\n"
  great_war_ends:0 "Великая Война закончилась\n"
  no_scripted_peace_warning_tt:0 "§RВнимание: при использовании этой опции перемирия больше не будут доступны, и любой подготовленный межвоенный контент не будет работать должным образом. Это означает, что вам придется продолжать войну до тех пор, пока все вражеские великие державы не будут побеждены, получив доступ к ванильной мирной конференции.§!"
+ russ_kapitulation:0 "§YРоссия§! капитулировала перед §YЦентральными Державами§!"
 
  pos_has_been_founded:0 "Была основана Социалистическая Рабочая партия\n"
  
@@ -1118,7 +1119,7 @@
  RUS_abdicate_in_favor_of_brother_desc:0 "Сформировался заговор против царя Николая II. Несколько высокопоставленных генералов собираются заставить царя подписать отречение от престола в пользу его брата, великого князя Михаила Александровича. Если он откажется, на основе российской Думы будет сформировано прореспубликанское правительство."
  tsar_mikhail_tt:0 "§YВеликий князь Михаил, станет царем в случае революции.§!\n"
  RUS_constitution_support:0 "Менее §Y50%§! Поддержка конституционалистов и монархистов "
- RUS_threat_of_revolution_tt:0 "Имеет идею §YУгроза революции§! "
+ RUS_threat_of_revolution_tt:0 "Имеет национальный дух §YУгроза революции§! "
  RUS_franzferdinand:0 "Мобилизация против Австро-Венгрии"
  RUS_franzferdinand_desc:0 "Австро-Венгрия объявили войну сербам. Пока мы говорим, артиллерийские снаряды обрушиваются на Белград. Наш долг - защитить наших православных и славянских братьев на Балканах, чтобы Сербия не попала в кривые руки Австро-Венгрии, которая предала нас еще во время Крымской войны. Пришло время мобилизоваться против этой угрозы нашему влиянию, даже ценой нашей страны."
  RUS_start_mobilization:0 "Начать мобилизацию"
@@ -1340,6 +1341,7 @@
  ITA_FRA_intervene_in_civil_war:0 "Вмешательство в гражданскую войну в Италии"
  
  SRD_sardinia_piedmont:0 "Провозгласить Сардинию-Пьемонт"
+ SRD_reclaim_italy:0 "Восстановить Королевство Италия"
  
  ITA_fiume_timer:0 "Разобраться с Фиуме"
  treaty_of_rapallo_1920:0 "Рапалльский договор был подписан"
