--- a/localisation/russian/countries_cosmetic_l_russian.yml
+++ b/localisation/russian/countries_cosmetic_l_russian.yml
@@ -1266,10 +1266,14 @@
  ITS_democratic_DEF:0 "Королевство Италия"
  ITS_fascism:0 "Королевство Италия"
  ITS_fascism_DEF:0 "Королевство Италия"
+ ITS_neutrality:0 "Королевство Италия"
+ ITS_neutrality_DEF:0 "Королевство Италия"
  ITS_bourbon_fascism:0 "Итальянская Империя"
  ITS_bourbon_fascism_DEF:0 "Итальянская Империя"
  ITS_bourbon_democratic:0 "Королевство Италия"
  ITS_bourbon_democratic_DEF:0 "Королевство Италия"
+ ITS_bourbon_neutrality:0 "Королевство Италия"
+ ITS_bourbon_neutrality_DEF:0 "Королевство Италия"
  ITS_bourbon_communism:0 "Итальянская Коммуна"
  ITS_bourbon_communism_DEF:0 "Итальянская Коммуна"
  SRI_communism:0 "Социалистическая Италия"
