--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1066,6 +1066,7 @@
  AZR:0 "Azerbaijan"
  AZR_DEF:0 "Azerbaijan"
  AZR_ADJ:0 "Azerbaijani"
+ ARM_democratic:0 "Republic of Armenia"
  ARM_democratic_DEF:0 "the Republic of Armenia"
  ARM_communism:1 "Armenian SR"
  ARM_communism_DEF:1 "the Armenian Socialist Republic"
