--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1726,7 +1726,7 @@
  VICTORY_POINTS_10687: "Walla Walla"
  VICTORY_POINTS_7386: "Tacoma"
  VICTORY_POINTS_10157: "Belingham"
- VICTORY_POINTS_12700: "Durrës"
+ VICTORY_POINTS_12700: "Dıraç"
  VICTORY_POINTS_1719: "Saint Paul"
  VICTORY_POINTS_3678: "Oakland"
  VICTORY_POINTS_11900: "Camden"
