--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4853,6 +4853,15 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.149.d:0 "Since the war is over, there's no hindrance before elections. As planned before, two parties will race for the governing place of the empire and secure majority in the parliament."
  ottoman.149.a:0 "Lets prepare for the elections."
  ottoman.149.tt:0 "Public elections will be held next month."
+ ottoman.150.t:0 "War on Western Thrace"
+ ottoman.150.d:0 "End of the Second Balkan War oversaw drastic shifts in Bulgaria's border. One of these were on it's Eastern border with the Ottomans. As negotiations went on, the Ottoman side pushed to Maritsa, Bulgarians had to chance of keeping [756.GetName]. Yet as the Ottoman committee pushed for the independence of the newly established Western Thrace, [RUS.GetNameDef] intervened in the negotiations.\nDemanding for Ottomans to pull out of Western Thrace and set Maritsa as their border, the Russians threated the empire with war. Yet thinking it's just a bluf, Ottomans kept their grounds nonetheless. As most had expected, this resulted in full blown war with Bulgaria and Russia on one side while Ottomans on the opposite."
+ ottoman.150.a:0 "If Russia is with us, who is against us?"
+ ottoman.150.b:0 "East to the West, we shall secure the freedom of Turks."
+ ottoman.150.c:0 "We run to the rescue of our allies."
+ ottoman.150.e:0 "Balkan War 2.5?"
+ ottoman.151.b.tt:0 "Becomes owned and controlled by §YArmenian Vilayet§!."
+ ottoman.151.b.tt2:0 "§YArmenian Vilayet§! becomes §YAutonomous Vilayet§! of §Y[TUR.GetName]§!."
+ ottoman.151.b.tt3:0 "\n\nAdd §YAnatolian Vilayet§! which grants:\n§YStability Factor§! and §YWar Support Factor§! will §Rdecrease§! depending on the §Yminorities§! the states we control and the §Ypolicies§! we enact on them.\n\n"
 
  ottoman_syria.1.t:0 "Küçük Cemal to Syria"
  ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
