--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1650,8 +1650,16 @@
  ALB_principality_neutrality_DEF:0 "the Principality of Albania"
  ALB_principality_democratic:0 "Principality of Albania"
  ALB_principality_democratic_DEF:0 "the Principality of Albania"
- ALB_vilayet:0 "Albanian Vilayet"
- ALB_vilayet_DEF:0 "the Albanian Vilayet"
+ greater_albania_democratic:0 "Greater Albania"
+ greater_albania_democratic_DEF:0 "Greater Albania"
+ greater_albania_neutrality:0 "Greater Albania"
+ greater_albania_neutrality_DEF:0 "Greater Albania"
+ greater_albania_communism:0 "Socialist Federation of Greater Albania"
+ greater_albania_communism_DEF:0 "the Socialist Federation of Greater Albania"
+ greater_albania_TUR_autonomy_tgwr_ottoman_autonomous_vilayet:0 "Albanian Vilayet"
+ greater_albania_TUR_autonomy_tgwr_ottoman_autonomous_vilayet_DEF:0 "the Albanian Vilayet"
+ ALB_TUR_autonomy_tgwr_ottoman_autonomous_vilayet:0 "Albanian Vilayet"
+ ALB_TUR_autonomy_tgwr_ottoman_autonomous_vilayet_DEF:0 "the Albanian Vilayet"
  ALB_sultanate_neutrality:0 "Sultanate of Albania"
  ALB_sultanate_neutrality_DEF:0 "the Sultanate of Albania"
  ALB_republic:0 "Albanian Republic"
@@ -1894,6 +1902,15 @@
  ARM_mountainous_fascism_DEF:0 "the Republic of Mountainous Armenia"
  ARM_mountainous_neutrality:0 "Mountainous Armenia"
  ARM_mountainous_neutrality_DEF:0 "the Republic of Mountainous Armenia"
+
+ anatolian_armenia:0 "Anatolian Armenia"
+ anatolian_armenia_DEF:0 "Anatolian Armenia"
+ anatolian_armenia_democratic:0 "Republic of Anatolian Armenia"
+ anatolian_armenia_democratic_DEF:0 "the Republic of Anatolian Armenia"
+ anatolian_armenia_communism:0 "Anatolian Armenian SR"
+ anatolian_armenia_communism_DEF:0 "the Anatolian Armenian Socialist Republic"
+ anatolian_armenia_tgwr_ottoman_autonomous_vilayet:0 "Armenian Vilayet"
+ anatolian_armenia_tgwr_ottoman_autonomous_vilayet_DEF:0 "the Armenian Vilayet"
 
  MOR_SPR_autonomy_tgwr_protectorate:0 "Spanish Morocco"
  MOR_SPR_autonomy_tgwr_protectoratee_DEF:0 "the Spanish Protectorate in Morocco"
