--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -6137,6 +6137,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_sue_for_peace_ITA:0 "Offer Surrender Terms to Italy"
  TUR_peace_ITA:0 "Treaty with Italy"
  TUR_sue_for_peace_SER:0 "Offer Surrender Terms to Balkan League"
+ TUR_sue_for_peace_BUL_and_RUS:0 "Offer Surrender Terms to [FROM.GetName]"
  TUR_surrender_to_entente:0 "Offer Surrender Terms to Entente"
  TUR_peace_SER:0 "Treaty with Balkan League"
  TUR_surrender_1st_balkan_war:0 "[TUR.GetName] First Balkan War Surrender"
