--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1309,6 +1309,11 @@
  SOV_focus_artillery_equipment: "Enhance Artillery Production"
  SOV_focus_plane_equipment: "Enhance Fighter Production"
 
+ #VLN
+ VLN_recruit_units:0 "Recruit Black Guard in [FROM.getName]"
+ VLN_3_infantry_unit:0 "forms 3 Black Guard Divisions."
+ VLN_core_states:0 "Form Makhnovist communes in [FROM.getName]"
+
  ITA_libyan_war_mission:0 "Italo-Turkish War"
  ITA_libyan_war_mission_desc:0 "If [ITA.GetNameDef] fails to seize Libya as soon as possible and delays their intervention, [TUR.GetNameDef] will be able to hold the London Conference and demand reparation from the Italians."
  ITA_libyan_war_won:0 "Italy Has Conquered Libya"
