mediterranean blockade fix

--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1123,6 +1123,9 @@
  TUR_mehmed_resid_committee_tt:0 "£decision_icon_small  §YDecisions§! related to §Yminorities§! are §Gtwice as fast§!\n"
  TUR_recently_integrated_economy:0 "Recently Integrated Economy"
  TUR_recently_integrated_economy_desc:0 "Recently integrated economy in the region gives us useful benefits, though their benefits are not ever lasting."
+ BUL_administrative_autonomy:0 "Administrative Autonomy"
+ BUL_administrative_autonomy_desc:0 "This state has its own governing body, effectively making it autonomous in many matters."
+ BUL_administrative_autonomy_tt:0 "§RThe state is set to be a Demilitarized Zone§!"
 
  AUH_austrian_integration:0 "Austrian Integration"
  AUH_condominium_of_bosnia_and_herzegovina:0 "Condominium of Bosnia and Herzegovina"
