--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10749,7 +10749,8 @@ VIN_complete_the_western_railway_desc:0 "Our relations with Siam are still cold,
  SAU_Dynasty_Politics_desc: "Following the Araif revolt, many members of the Saudi dynasty have developed an interest in the state's politics. Within the dynasty, there is a divide: some members wish to maintain traditional ways, while others advocate for reform and modernization. This internal debate reflects broader questions about the future direction of the nation, balancing respect for cultural heritage with the need for progress and development. Navigating these dynamics will be crucial for the state's leadership as they strive to unify the nation and address the challenges of the modern world."
  SAU_Reform: "Reform the State"
  SAU_Reform_desc: "The Saudi state has historically been perceived as backward, fundamentalist, and somewhat terroristic, often despised and opposed by its neighbors, both small and large. Domestically, the situation is also problematic, as the state relies on outdated knowledge and practices from the 18th century. This must change. Saudi Arabia needs to transform into a beacon of modernity among the tribes and Peninsular Arabs, embracing the advancements and innovations of the 20th century. By adopting modern technologies, progressive policies, and comprehensive educational reforms, Saudi Arabia can position itself as a leading state in the region, fostering development, stability, and prosperity for its people."
- SAU_get_rid_of_ikhwan: "Get rid of Ikhwan"
+ SAU_get_rid_of_ikhwan: "Get Rid of Ikhwan"
+ SAU_get_rid_of_ikwhan: "the Ikwhan have served His Majesty since 1902. however, they are no match for Ottoman troops. the time has come to reorganise this group of fanatics into a proper force." 
  SAU_pacify_tribes: "Pacify the Tribes"
  SAU_modern_army: "Modern Army"
  SAU_cooperate_with_shias: "Shia Cooperation"
